benchmark: retain bounded JVM runtime evidence